Swagger schema for  search products and exercises
